--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,30 @@
-spring.application.name=ProductService
-# FakeStore Api config
-fakestore.api.url = https://fakestoreapi.com
-fakestore.products.path = /products
-fakestore.category.path =  /category
+# Configuration file.
+# Key-Value type of file
+# Key:value
+
+
+#FakeStore config variables.
+fakestore.api.url=https://fakestoreapi.com
+fakestore.api.paths.products=/products
+fakestore.api.paths.categories=/categories
+
 
 # connction to mySql database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=productservice
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://userservice-final-2-env.eu-north-1.elasticbeanstalk.com/
+##spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:4000/
+#logging.level.org.springframework.security=trace
+server.port=8080
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+spring.application.name=productservice
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
+#opensearch.uris=https://search-productservice-let4qlclz66osb5odmfvy76mlu.eu-north-1.es.amazonaws.com
